Portfolio left right navigation

--- a/src/portfolio/1.md
+++ b/src/portfolio/1.md
@@ -4,12 +4,16 @@ title: Nature - 1
 ---
 
 <div>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio/9">
+    <div class="relative"><div class="absolute left-3 top-8 h-full"><div class="align-middle"><i class="fa-solid fa-chevron-left"></i></div></div></div>
+  </a>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio/2">
+    <div class="relative"><div class="absolute right-3 top-8 h-full"><div class="align-middle"><i class="fa-solid fa-chevron-right"></i></div></div></div>
+  </a>
   <a class="text-black no-underline dark:text-slate-100" href="../portfolio#1">
-    <div class="relative">
-      <div class="absolute top-1 right-3 ...">
-        <i class="fa fa-xmark"></i>
-      </div>
-    </div>
+    <div class="relative"><div class="absolute top-1 right-3"><i class="fa fa-xmark"></i></div></div>
+  </a>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio#1">
     <img class="w-full h-full rounded-lg" src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(1).webp">
   </a>
 </div>
