--- a/src/portfolio/9.md
+++ b/src/portfolio/9.md
@@ -1,15 +1,20 @@
 ---
 layout: page
-title: Nature 9
+title: Nature - 9
 ---
 
 <div>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio/8">
+    <div class="relative"><div class="absolute left-3 top-8 h-full"><div class="align-middle"><i class="fa-solid fa-chevron-left"></i></div></div></div>
+  </a>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio/1">
+    <div class="relative"><div class="absolute right-3 top-8 h-full"><div class="align-middle"><i class="fa-solid fa-chevron-right"></i></div></div></div>
+  </a>
   <a class="text-black no-underline dark:text-slate-100" href="../portfolio#9">
-    <div class="relative">
-      <div class="absolute top-1 right-3 ...">
-        <i class="fa fa-xmark"></i>
-      </div>
-    </div>
+    <div class="relative"><div class="absolute top-1 right-3"><i class="fa fa-xmark"></i></div></div>
+  </a>
+  <a class="text-black no-underline dark:text-slate-100" href="../portfolio#9">
     <img class="w-full h-full rounded-lg" src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(9).webp">
   </a>
+
 </div>
